--- a/frontend/src/app/shared/radiolearn-options/radiolearn-options.component.scss
+++ b/frontend/src/app/shared/radiolearn-options/radiolearn-options.component.scss
@@ -17,11 +17,11 @@ td.title {
 }
 
 td.variables {
-  width: 260px;
+  width: 50%;
 }
 
 td.button {
-  width: 120px;
+  width: 50%;
 }
 
 label.selected {
